--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-dotenv = "^1.0.0"
 openai = "^1.3.5"
 chromadb = "^0.4.18"
 tiktoken = "^0.5.1"
+mdutils = "^1.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.5.0"
